Updateds to Serializer where .Update() method was not working properly
